--- a/proto.html
+++ b/proto.html
@@ -6,26 +6,40 @@
               content="width=device-width,initial-scale=1,user-scalable=no">
         <link rel="stylesheet" type="text/css" href="style.css"></link>
         <script src="https://unpkg.com/vue"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue-mq@1.0.1/dist/vue-mq.min.js"></script>
     </head>
     <body>
         <div id="app" style="padding: 0">
             <header> 
-                    Service Monitor
+                <div style="float: left;">Service Monitor</div>
+                <div style="float: right;">S</div>
             </header>
             <main>
-                <div v-for="e in events">
-                    <div class="list-item"
-                         style="display: flex;"
-                        :style="e.style">
-                        <div>{{ e.service }}</div>
-                        <div>{{ e.title }}</div>
+                <div class="events-wrapper">
+                    <div v-for="e in events">
+                        <div class="list-item"
+                             style="display: flex;"
+                            :style="e.style">
+                            <div>{{ e.service }}</div>
+                            <mq-layout mq="md+">
+                                <div>{{ e.title }}</div>
+                            </mq-layout>
+                        </div>
+                        <div v-show="false"> more info here </div>
                     </div>
-                    <div v-show="false"> more info here </div>
                 </div>
             <main>
         </div>
 
         <script>
+            Vue.use(vueMq, {
+                breakpoints: {
+                    sm: 450,
+                    md: 1250,
+                    lg: Infinity,
+                },
+                defaultBreakpoint: 'sm'
+            });
             var app = new Vue({
                 el: "#app",
                 data: {
